# canva-interview-1109

./: .gitignore  .pre-commit-config.yaml  GIT_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh  setup_git.ps1  setup_git.sh
.cursor/commands/: pr.md
.cursor/rules/: project-structure.mdc  style-guide.mdc
template/: TASK_PLAN_TEMPLATE.md
